test/corpus/comments.txt
================================================================================
Inline comment
================================================================================
{# this is a comment with enough ordinary text to measure inline comment scanning without the corpus benchmark being dominated by fixed parser setup overhead #}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Empty inline comment
================================================================================
{##}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Inline comment with hash
================================================================================
{# one # two #}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Multi-line comment (not allowed by spec)
================================================================================
{# line one
   line two
   {% tag
   }}
   line three #}
--------------------------------------------------------------------------------

(template
  (comment))

================================================================================
Multi-line comment tag
================================================================================
{% comment %}
  line one
  line two
  {{
  {% tag
  line three
{% endcomment %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (comment_text)
    (end_tag)))

================================================================================
Empty comment tag
================================================================================
{% comment %}{% endcomment %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (end_tag)))

================================================================================
Comment tag with spaced end tag
================================================================================
{% comment %}
  {% if this_is_not_parsed %}
{%   endcomment   %}
--------------------------------------------------------------------------------

(template
  (block
    (start_tag)
    (comment_text)
    (end_tag)))
